--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 	<p>
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
-		<img src="https://archimedeansolids.github.io/w3images/aqualover.gif" 
+		<img src="https://archimedeansolids.github.io/w3images/aquaicon.png" 
 		alt="Aqualover" width="32" height="32"></a>
 		Aqualover
 		</p>
