--- a/index.html
+++ b/index.html
@@ -106,7 +106,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 		Volume Solutions to the Snub Dodecahedron</a></b></span> which 
 		reveals a secert origin to the golden ratio found in the 
 		Thirteenth Archimedean Solid.
-		Fuller's spinnability of negative and positive leads to a new root, 
+		
+		<span style="color:DarkGoldenrod">
+		<b><a href=
+		"https://x.com/hashtag/BuckminsterFuller"
+		target="_blank" class="w3-hover-text-green">
+		Fuller's</a></b></span> spinnability of negative and positive leads to a new root, 
 		as shown above, what appears to be an <b><span style="color:DarkGoldenrod">
 		Origin</b></span> to <span style="color:DarkGoldenrod">
 		<b><a href="https://nbviewer.org/url/archimedeansolids.github.io/Golden_Powers_Plot.ipynb"
