--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
   <h1><b>Archimedean Solids</b></h1>
-  <p>Welcome to <a href="https://orcid.org/0000-0003-4469-051X"> 
-  <span class="w3-codespan">Mark's</span></a> blog</p>
 </header>
 
 <!-- Grid -->
@@ -147,7 +145,8 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
 		<img src="/w3images/aqualover.gif" style="width:95%">
-      <h4><b>My Links</b></h4>
+
+		<h4><b>Welcome to Mark's blog, my links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
