--- a/index.html
+++ b/index.html
@@ -121,9 +121,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="/w3images/PeachPy_1.png" alt="GitHub project: PeachPy" style="width:100%">
+  <img src="/w3images/AquaLover_App.png" alt="GitHub project: PeachPy" style="width:100%">
     <div class="w3-container">
-      <h3><b>My GitHub project: PeachPy</b></h3>
+		<h3><b>My GitHub project: 
+		<a href="https://github.com/archimedeansolids/aqualover"
+		target="_blank" class="w3-hover-text-blue">
+		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
+		alt="Aqualover" width="64" height="64">AquaLover</a></b></h3>
     </div>
 
     <div class="w3-container">
