--- a/aqualover.html
+++ b/aqualover.html
@@ -82,26 +82,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 		alt="Research Gate" width="32" height="32"></a>
 		</p>
 		<p>
-		PeachPy
-		</p>
-		<p>
-		Aqualover
-		</p>
-		<p>
-		Geometery 
-		</p>
-		<p style="margin-left: 15px;">
-		<a href="https://bookmarkadams.github.io/pdf/ArchimedeanPlatonicSolids.pdf" 
-		target="_blank" class="w3-hover-text-green">Archimedean and Platonic Solids</a>
-		</p><p style="margin-left: 15px;">
-		<a href="https://nbviewer.org/url/bookmarkadams.github.io/Snub_Dodecahedron_Volumes.ipynb" 
-		target="_blank" class="w3-hover-text-green">Volume Solutions to the Snub Dodecahedron</a>
-		</p><p style="margin-left: 15px;">
-		<a href="https://nbviewer.org/url/bookmarkadams.github.io/Snub_Dodecahedron_Six_Ways.ipynb" 
-		target="_blank" class="w3-hover-text-green">Snub Dodecahedron Six Ways</a>
-		</p><p style="margin-left: 15px;">
-		<a href="https://nbviewer.org/url/bookmarkadams.github.io/Golden_Powers_Plot.ipynb" 
-		target="_blank" class="w3-hover-text-green">Golden Powers Plot Python</a>
+		My GitHub project: 
+		<a href="https://github.com/archimedeansolids/aqualover"
+		target="_blank" class="w3-hover-text-green">
+		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
+		alt="Aqualover" width="64" height="64"> AquaLover</a></span>
 		</p>
     </div>
   </div><hr>
