--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<span style="color:MediumBlue">
 		
 		My GitHub project: 
-		<a href="https://github.com/archimedeansolids/aqualover"
+		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
 		alt="Aqualover" width="64" height="64"> AquaLover</a></span></b></h3>
@@ -136,12 +136,6 @@ and is wrapped around the whole page content, except for the footer in this exam
 
     <div class="w3-container">
       <p>JSON driven GUI.</p>
-      <div class="w3-row">
-        <div class="w3-col m8 s12">
-          <p><button class="w3-button w3-padding-large w3-white w3-border">
-		  <b>READ MORE »</b></button></p>
-        </div>
-      </div>
     </div>
   </div>
 <!-- END BLOG ENTRIES -->
