--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">Volume Solutions to the Snub Dodecahedron</a>
 		</p><p style="margin-left: 15px;">
 		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Six_Ways.ipynb" 
-		target="_blank" class="w3-hover-text-green">Snub Dodecahedron Six Ways</a>
+		target="_blank" class="w3-hover-text-green">Snub Dodecahedron Six Python Ways</a>
 		</p><p style="margin-left: 15px;">
 		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Golden_Powers_Plot.ipynb" 
-		target="_blank" class="w3-hover-text-green">Golden Powers Plot Python</a>
+		target="_blank" class="w3-hover-text-green">Golden Powers Python Plot</a>
 		</p>
     </div>
   </div><hr>
@@ -224,22 +224,12 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">Sr</p>
+			<p class="copyright-text">Copyright &copy; All Rights Reserved for image &quot;aqualover.gif&quot; by
+				<a href="https://archimedeansolids.github.io/geodesic.html">Geodesic Designs</a>.
+            </p>
           </div>
         </div>
         <hr>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">Copyright &copy; All Rights Reserved by 
-         <a href="https://archimedeansolids.github.io/geodesic.html"Geodesic Designs</a>.
-			for aqualover.gif 
-            </p>
-          </div>
-
-        </div>
       </div>
 </footer>
 
