--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">
 		Volume Solutions to the Snub Dodecahedron</a></b></span> which 
 		reveals a secert origin to the golden ratio found in the 
-		Thirteenth Archimedean Solid.
+		Thirteenth Archimedean. 
 		
 		<span style="color:DarkGoldenrod">
 		<b><a href=
@@ -121,7 +121,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="/w3images/AquaLover_App.png" alt="GitHub project: PeachPy" style="width:100%">
+  <img src="/w3images/AquaLover_App.png" alt="GitHub project: AquaLover" style="width:100%">
     <div class="w3-container">
 		<h3><b>
 		
@@ -147,7 +147,6 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
 		<img src="/w3images/aqualover.gif" style="width:95%">
-
 		<h4><b>Welcome to Mark's blog, my links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
@@ -179,9 +178,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
 		alt="Research Gate" width="32" height="32"></a>
-		</p>
-		
-		
+		</p>		
 	<p>
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
@@ -206,13 +203,10 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">Golden Powers Python Plot</a>
 		</p>
     </div>
-  </div><hr>
-  
-  <!-- Posts -->
-  <hr> 
- 
-  
-<!-- END Introduction Menu -->
+	</div><hr>
+	<!-- Posts -->
+	<hr>   
+	<!-- END Introduction Menu -->
 </div>
 
 <!-- END GRID -->
