--- a/aqualover.html
+++ b/aqualover.html
@@ -20,8 +20,6 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
   <h1><b>Aqualover</b></h1>
-  <p>Welcome to the blog of <a href="https://orcid.org/0000-0003-4469-051X"> 
-  <span class="w3-codespan">Mark Shelby Adams</span></a></p>
 </header>
 
 <!-- Grid -->
@@ -33,10 +31,13 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card-4 w3-margin w3-white">
     <img src="/w3images/aqualover.gif" alt="One third powers of the Golden Ratio" style="width:100%">
     <div class="w3-container">
-      <h3><b>Secert origin to the golden ratio found in the Thirteenth Archimedean Solid</b></h3>
-    </div>
-    <div class="w3-container">
-      <p>Buckminster Fuller was so nice to me. When in college,</p> 
+	<p>
+		<a href="https://github.com/archimedeansolids/aqualover"
+		target="_blank" class="w3-hover-text-green">
+		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
+		alt="Aqualover" width="64" height="64"></a>
+		Aqualover GitHub Repository
+		</p>
     </div>
   </div>
   <hr>
@@ -49,7 +50,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
 		<img src="/w3images/aqualover.gif" style="width:95%">
-      <h4><b>My Links</b></h4>
+		<h4><b>Welcome to Mark's blog, my links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
@@ -68,34 +69,47 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 		<a href="https://www.linkedin.com/in/markadamsme/"
 		target="_blank" class="w3-hover-text-green">
-		<img src="https://bookmarkadams.github.io/w3images/linkedin.png" 
+		<img src="https://archimedeansolids.github.io/w3images/linkedin.png" 
 		alt="LinkedIn" width="32" height="32"></a>
 
 		<a href="https://scholar.google.com/citations?hl=en&user=Kq7duNQAAAAJ"
 		target="_blank" class="w3-hover-text-green">
-		<img src="https://bookmarkadams.github.io/w3images/G_Scholar.png" 
+		<img src="https://archimedeansolids.github.io/w3images/G_Scholar.png" 
 		alt="Google Scholar" width="32" height="32"></a>
 
 		<a href="https://www.researchgate.net/profile/Mark-Adams-3"
 		target="_blank" class="w3-hover-text-green">
-		<img src="https://bookmarkadams.github.io/w3images/r_gate.png" 
+		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
 		alt="Research Gate" width="32" height="32"></a>
-		</p>
-		<p>
-		My GitHub project: 
-		<a href="https://github.com/archimedeansolids/aqualover"
+		</p>		
+	<p>
+		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="64" height="64"> AquaLover</a></span>
+		alt="Aqualover" width="32" height="32"></a>
+		Aqualover
+		</p>
+		<p>
+		Geometery 
+		</p>
+		<p style="margin-left: 15px;">
+		<a href="https://archimedeansolids.github.io/pdf/ArchimedeanPlatonicSolids.pdf" 
+		target="_blank" class="w3-hover-text-green">Archimedean and Platonic Solids</a>
+		</p><p style="margin-left: 15px;">
+		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Volumes.ipynb" 
+		target="_blank" class="w3-hover-text-green">Volume Solutions to the Snub Dodecahedron</a>
+		</p><p style="margin-left: 15px;">
+		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Six_Ways.ipynb" 
+		target="_blank" class="w3-hover-text-green">Snub Dodecahedron Six Python Ways</a>
+		</p><p style="margin-left: 15px;">
+		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Golden_Powers_Plot.ipynb" 
+		target="_blank" class="w3-hover-text-green">Golden Powers Python Plot</a>
 		</p>
     </div>
-  </div><hr>
-  
-  <!-- Posts -->
-  <hr> 
- 
-  
-<!-- END Introduction Menu -->
+	</div><hr>
+	<!-- Posts -->
+	<hr>   
+	<!-- END Introduction Menu -->
 </div>
 
 <!-- END GRID -->
