--- a/geodesic.html
+++ b/geodesic.html
@@ -30,10 +30,16 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="/w3images/PeachPy_1.png" alt="One third powers of the Golden Ratio" style="width:100%">
+    <img src="/w3images/geodesic.gif" alt="Geodesic Designs" style="width:100%">
     <div class="w3-container">
       <h3><b>Geodesic Designs, Inc.</b></h3>	  
-		<p>President, Mark Adams<br>1988 - Present<br>Duluth, Georgia</p>  
+		<p>President, Mark Adams<br>1988 - Present<br>Duluth, Georgia</p> 
+<p>Geodesic Designs - 
+&quot;Our goal is to empower you with 
+the most flexible tools as possible&quot;</p>
+
+<p>Geodesic Designs, Inc. has been incorporated in Georgia since 1988 </p>
+	
     </div>
   </div>
   <hr>
