--- a/geodesic.html
+++ b/geodesic.html
@@ -30,16 +30,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="/w3images/geodesic.gif" alt="Geodesic Designs" style="width:100%">
+    <img src="/w3images/geodesic.gif" alt="Geodesic Designs" width="200" height="200">
     <div class="w3-container">
       <h3><b>Geodesic Designs, Inc.</b></h3>	  
 		<p>President, Mark Adams<br>1988 - Present<br>Duluth, Georgia</p> 
-<p>Geodesic Designs - 
-&quot;Our goal is to empower you with 
-the most flexible tools as possible&quot;</p>
-
-<p>Geodesic Designs, Inc. has been incorporated in Georgia since 1988 </p>
-	
+		<p>&quot;Our goal is to empower you with the most flexible tools as possible&quot;</p>
+		<p>Geodesic Designs, Inc. has been incorporated in Georgia since 1988.</p>
     </div>
   </div>
   <hr>
@@ -51,8 +47,7 @@ the most flexible tools as possible&quot;</p>
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
-		<img src="/w3images/aqualover.gif" style="width:95%">
-		<h4><b>Welcome to Mark's blog, my links</b></h4>
+		<h4><b>Links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
