--- a/aqualover.html
+++ b/aqualover.html
@@ -29,14 +29,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="/w3images/aqualover.gif" alt="One third powers of the Golden Ratio" style="width:100%">
     <div class="w3-container">
 	<p>
-		<a href="https://github.com/archimedeansolids/aqualover"
-		target="_blank" class="w3-hover-text-green">
-		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="64" height="64"></a>
-		Aqualover GitHub Repository
+		Aqualover is a Python tool
 		</p>
     </div>
   </div>
@@ -49,8 +44,8 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!-- About Card -->
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
-		<img src="/w3images/aqualover.gif" style="width:95%">
-		<h4><b>Welcome to Mark's blog, my links</b></h4>
+		<img src="/w3images/aqualover.gif" alt="Aqualover" style="width:100%">
+		<h4><b>Links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
@@ -87,23 +82,15 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
 		alt="Aqualover" width="32" height="32"></a>
-		Aqualover
+		Aqualover Blog
 		</p>
-		<p>
-		Geometery 
-		</p>
-		<p style="margin-left: 15px;">
-		<a href="https://archimedeansolids.github.io/pdf/ArchimedeanPlatonicSolids.pdf" 
-		target="_blank" class="w3-hover-text-green">Archimedean and Platonic Solids</a>
-		</p><p style="margin-left: 15px;">
-		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Volumes.ipynb" 
-		target="_blank" class="w3-hover-text-green">Volume Solutions to the Snub Dodecahedron</a>
-		</p><p style="margin-left: 15px;">
-		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Six_Ways.ipynb" 
-		target="_blank" class="w3-hover-text-green">Snub Dodecahedron Six Python Ways</a>
-		</p><p style="margin-left: 15px;">
-		<a href="https://nbviewer.org/url/archimedeansolids.github.io/Golden_Powers_Plot.ipynb" 
-		target="_blank" class="w3-hover-text-green">Golden Powers Python Plot</a>
+
+	<p>
+		<a href="https://github.com/archimedeansolids/aqualover"
+		target="_blank" class="w3-hover-text-green">
+		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
+		alt="Aqualover" width="32" height="32"></a>
+		Aqualover GitHub Repository
 		</p>
     </div>
 	</div><hr>
