--- a/aqualover.html
+++ b/aqualover.html
@@ -25,19 +25,6 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Grid -->
 <div class="w3-row">
 
-<!-- Blog entries -->
-<div class="w3-col l8 s12">
-  <!-- Blog entry -->
-  <div class="w3-card-4 w3-margin w3-white">
-    <div class="w3-container">
-	<p>
-		Aqualover is a Python tool
-		</p>
-    </div>
-  </div>
-  <hr>
-<!-- END BLOG ENTRIES -->
-</div>
 
 <!-- Introduction menu -->
 <div class="w3-col l4">
@@ -45,7 +32,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
 		<img src="/w3images/aqualover.gif" alt="Aqualover" style="width:100%">
-		<h4><b>Links</b></h4>
+		<h4><b>Mark's Links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
@@ -77,11 +64,23 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
 		alt="Research Gate" width="32" height="32"></a>
 		</p>		
+
+
+	<p>
+		<a href="https://archimedeansolids.github.io"
+		target="_blank" class="w3-hover-text-green">
+		<img src="/w3images/geodesic.gif" 
+		alt="Geodesic" width="50" height="50"></a>
+		Marks Blog
+		</p>
+
+
+		<h4><b>Aqualover</b></h4>
 	<p>
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="32" height="32"></a>
+		alt="Aqualover" width="50" height="50"></a>
 		Aqualover Blog
 		</p>
 
@@ -89,9 +88,14 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<a href="https://github.com/archimedeansolids/aqualover"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="32" height="32"></a>
+		alt="Aqualover" width="50" height="50"></a>
 		Aqualover GitHub Repository
 		</p>
+		
+	<p>
+		Aqualover is a Python tool
+		</p>
+
     </div>
 	</div><hr>
 	<!-- Posts -->
