--- a/aqualover.html
+++ b/aqualover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PeachPy</title>
+<title>Aqualover</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,8 +18,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
 <!-- Header -->
-<header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>Aqualover</b></h1>
+<header class="w3-container w3-padding-32"> 
+  <h1><b>Aqualover Blog</b></h1>
 </header>
 
 <!-- Grid -->
@@ -75,21 +75,16 @@ and is wrapped around the whole page content, except for the footer in this exam
 		</p>
 
 
-		<h4><b>Aqualover</b></h4>
-	<p>
-		<a href="https://archimedeansolids.github.io/aqualover.html"
+		<h4><b><a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="50" height="50"></a>
-		Aqualover Blog
-		</p>
+		alt="Aqualover" width="50" height="50">
+		Aqualover Blog</a></b></h4>
 
 	<p>
 		<a href="https://github.com/archimedeansolids/aqualover"
 		target="_blank" class="w3-hover-text-green">
-		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="50" height="50"></a>
-		Aqualover GitHub Repository
+		Aqualover GitHub Repository</a>
 		</p>
 		
 	<p>
