--- a/geodesic.html
+++ b/geodesic.html
@@ -78,7 +78,18 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
 		alt="Research Gate" width="32" height="32"></a>
-		</p>		
+		</p>
+
+	<p>
+		<a href="https://archimedeansolids.github.io"
+		target="_blank" class="w3-hover-text-green">
+		<img src="/w3images/geodesic.gif" 
+		alt="Geodesic" width="50" height="50"></a>
+		Marks Blog
+		</p>
+
+
+		
 	<p>
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
