--- a/aqualover.html
+++ b/aqualover.html
@@ -32,7 +32,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card w3-margin w3-margin-top">
     <div class="w3-container w3-white">
 		<img src="/w3images/aqualover.gif" alt="Aqualover" style="width:100%">
-		<h4><b>Mark's Links</b></h4>
+		<h4><b>Mark's links</b></h4>
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
@@ -70,8 +70,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<a href="https://archimedeansolids.github.io"
 		target="_blank" class="w3-hover-text-green">
 		<img src="/w3images/geodesic.gif" 
-		alt="Geodesic" width="50" height="50"></a>
-		Marks Blog
+		alt="Geodesic" width="50" height="50">
+		Mark's blog</a>
 		</p>
 
 
@@ -79,7 +79,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
 		alt="Aqualover" width="50" height="50">
-		Aqualover Blog</a></b></h4>
+		Aqualover blog</a></b></h4>
 
 	<p>
 		<a href="https://github.com/archimedeansolids/aqualover"
