--- a/geodesic.html
+++ b/geodesic.html
@@ -84,8 +84,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<a href="https://archimedeansolids.github.io"
 		target="_blank" class="w3-hover-text-green">
 		<img src="/w3images/geodesic.gif" 
-		alt="Geodesic" width="50" height="50"></a>
-		Marks Blog
+		alt="Geodesic" width="50" height="50">
+		Mark's blog</a>
 		</p>
 
 
