--- a/index.html
+++ b/index.html
@@ -121,23 +121,21 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="/w3images/AquaLover_App.png" alt="GitHub project: AquaLover" style="width:100%">
     <div class="w3-container">
 		<h3><b>
-		
 		<span style="color:MediumBlue">
-		
-		My GitHub project: 
+		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
+		alt="Aqualover" width="64" height="64">
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
-		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="64" height="64"> AquaLover</a></span></b></h3>
-    </div>
+		AquaLover </a>
+		</span></b></h3>
+		Python GitHub project, JSON driven GUI. 
+		</div>
+		<img src="/w3images/AquaLover_App.png" alt="GitHub project: AquaLover" style="width:100%">
+	</div>
+  
 
-    <div class="w3-container">
-      <p>JSON driven GUI.</p>
-    </div>
-  </div>
 <!-- END BLOG ENTRIES -->
 </div>
 
