--- a/aqualover.html
+++ b/aqualover.html
@@ -73,15 +73,15 @@ and is wrapped around the whole page content, except for the footer in this exam
 		alt="Geodesic" width="50" height="50">
 		Mark's blog</a>
 		</p>
-
-
-		<h4><b><a href="https://archimedeansolids.github.io/aqualover.html"
+	<h4><b>Aqualover</b></h4>
+		<p style="margin-left: 15px;">
+		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
 		alt="Aqualover" width="50" height="50">
-		Aqualover blog</a></b></h4>
+		Aqualover's blog</a></p>
 
-	<p>
+	<p style="margin-left: 15px;">
 		<a href="https://github.com/archimedeansolids/aqualover"
 		target="_blank" class="w3-hover-text-green">
 		Aqualover GitHub Repository</a>
