--- a/geodesic.html
+++ b/geodesic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>PeachPy</title>
+<title>Geodesic Designs</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -94,8 +94,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="32" height="32"></a>
-		Aqualover
+		alt="Aqualover" width="50" height="50">
+		Aqualover's blog</a>
 		</p>
 		<p>
 		Geometery 
