--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
-		alt="Aqualover" width="32" height="32"></a>
-		Aqualover
+		alt="Aqualover" width="32" height="32">
+		Aqualover</a>
 		</p>
 		<p>
 		Geometery 
