--- a/geodesic.html
+++ b/geodesic.html
@@ -9,6 +9,7 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
+<link rel="icon" type="w3_images/x-icon" href="/w3_images/geodesic.ico">
 </head>
 <body class="w3-light-grey">
 
