--- a/aqualover.html
+++ b/aqualover.html
@@ -9,6 +9,10 @@
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
+<link rel="icon" type="image/png" sizes="16x16" rel="noopener" target="_blank" href="/w3images/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" rel="noopener" target="_blank" href="/w3images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" rel="noopener" target="_blank" href="/w3images/favicon-48x48.png">
+
 </head>
 <body class="w3-light-grey">
 
