--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<span style="color:green"><b><a href=
 		"https://archimedeansolids.github.io/pdf/ArchimedeanPlatonicSolids.pdf"
 		target="_blank" class="w3-hover-text-green">		
-		book</a></b></span> to Donald Coxeter and he talked to me about it. 
-		Gracious is the way of mathematicians!</p>
+		book</a></b></span> to Donald Coxeter and he talked to me about it. I first knew Harish Rajpoot 
+		when he was at Madan Mohan Malaviya University of Technology, Gorakhpur, 
+		where the Rapti River runs down from Nepal.</p>
 	<p>
 		The other two closed form solutions of the Snub Dodecahedron are in an
 		<span style="color:blue"><b><a href=
@@ -83,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<span style="color:blue"><b><a href="https://en.wikipedia.org/wiki/Snub_dodecahedron"
 		target="_blank" class="w3-hover-text-green">
 		Snub Dodecahedron</a></b></span>, there is a link to the essay.  		
-		Menno is the owner this Wikipedia page and also an advocate of 
+		Menno is the owner of this Wikipedia page and an advocate of 
 		<span style="color:blue"><b><a href=
 		"https://www.sagemath.org/"
 		target="_blank" class="w3-hover-text-green">
