--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<span style="color:green"><b><a href=
 		"https://archimedeansolids.github.io/pdf/ArchimedeanPlatonicSolids.pdf"
 		target="_blank" class="w3-hover-text-green">		
-		book</a></b></span> to Donald Coxeter and he talked to me about it. I first knew Harish Rajpoot 
-		when he was at Madan Mohan Malaviya University of Technology, Gorakhpur, 
-		where the Rapti River runs down from Nepal.</p>
+		book</a></b></span> to Donald Coxeter and we talked. 
+		I started knowing 
+		<span style="color:green"><b><a href=
+		"https://hcrajpoot.jimdofree.com/"
+		target="_blank" class="w3-hover-text-green">		
+		Harish Rajpoot</a></b></span> when he was at Madan Mohan Malaviya 
+		University of Technology, Gorakhpur, where the Rapti River runs down from Nepal.</p>
 	<p>
 		The other two closed form solutions of the Snub Dodecahedron are in an
 		<span style="color:blue"><b><a href=
