--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@ and is wrapped around the whole page content, except for the footer in this exam
         <div class="row">
           <div class="col-sm-12 col-md-6">
 			<p class="copyright-text">Copyright &copy; All Rights Reserved for image &quot;aqualover.gif&quot; by 
+				<a href="https://archimedeansolids.github.io/geodesic.html">
+				<img src="/w3images/geodesic.gif" alt="Geodesic Designs" width="100" height="100"></a> 
 				<a href="https://archimedeansolids.github.io/geodesic.html">Geodesic Designs</a>.
             </p>
           </div>
