--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ and is wrapped around the whole page content, except for the footer in this exam
   <div class="w3-card-4 w3-margin w3-white">
     <img src="/w3images/Golden_Ratio.png" alt="One third powers of the Golden Ratio" style="width:100%">
     <div class="w3-container">
-      <h3><b>Secert origin to the golden ratio found in the Thirteenth Archimedean Solid</b></h3>
+      <h3><b>Secret origin to the golden ratio found in the Thirteenth Archimedean Solid</b></h3>
     </div>
     <div class="w3-container">
       <p>Buckminster Fuller was so nice to me. When in college, 
@@ -111,7 +111,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		"https://nbviewer.org/url/archimedeansolids.github.io/Snub_Dodecahedron_Volumes.ipynb"
 		target="_blank" class="w3-hover-text-green">
 		Volume Solutions to the Snub Dodecahedron</a></b></span> which 
-		reveals a secert origin to the golden ratio found in the 
+		reveals a secret origin to the golden ratio found in the 
 		Thirteenth Archimedean. 
 		
 		<span style="color:DarkGoldenrod">
