--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		"https://archimedeansolids.github.io/pdf/ArchimedeanPlatonicSolids.pdf"
 		target="_blank" class="w3-hover-text-green">		
 		book</a></b></span> to Donald Coxeter and we talked. 
-		I started knowing 
+		I became friends  with  
 		<span style="color:green"><b><a href=
 		"https://hcrajpoot.jimdofree.com/"
 		target="_blank" class="w3-hover-text-green">		
@@ -225,7 +225,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-6">
-			<p class="copyright-text">Copyright &copy; All Rights Reserved for image &quot;aqualover.gif&quot; by 
+			<p class="copyright-text">Copyright &copy; All Rights Reserved for Geodesic and Aqualover images by 
 				<a href="https://archimedeansolids.github.io/geodesic.html">
 				<img src="/w3images/geodesic.gif" alt="Geodesic Designs" width="100" height="100"></a> 
 				<a href="https://archimedeansolids.github.io/geodesic.html">Geodesic Designs</a>.
