--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<img src="https://archimedeansolids.github.io/w3images/GitHub.png" 
 		alt="GitHub" width="32" height="32"></a>
 
+		<a href="https://discord.com/channels/836455665257021440/836455665257021443"
+		target="_blank" class="w3-hover-text-green">
+		<img src="https://archimedeansolids.github.io/w3images/BeeWare.png" 
+		alt="Discord Toga BeeWare" width="32" height="32"></a>
+
 		<a href="https://x.com/bookmarkadams"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/twitter.png" 
@@ -185,7 +190,8 @@ and is wrapped around the whole page content, except for the footer in this exam
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
 		alt="Research Gate" width="32" height="32"></a>
-		</p>		
+		</p>
+		
 	<p>
 		<a href="https://archimedeansolids.github.io/aqualover.html"
 		target="_blank" class="w3-hover-text-green">
