comment from python script

--- a/aqualover.html
+++ b/aqualover.html
@@ -37,6 +37,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     <div class="w3-container w3-white">
 		<img src="/w3images/aqualover.gif" alt="Aqualover" style="width:100%">
 		<h4><b>Mark's links</b></h4>
+
 	<p>
 		<a href="https://orcid.org/0000-0003-4469-051X"
 		target="_blank" class="w3-hover-text-green">
@@ -48,26 +49,33 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<img src="https://archimedeansolids.github.io/w3images/GitHub.png" 
 		alt="GitHub" width="32" height="32"></a>
 
+		<a href="https://discord.com/channels/836455665257021440/836455665257021443"
+		target="_blank" class="w3-hover-text-green">
+		<img src="https://archimedeansolids.github.io/w3images/BeeWare.png" 
+		alt="Discord Toga BeeWare" width="32" height="32"></a>
+
 		<a href="https://x.com/bookmarkadams"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/twitter.png" 
-		alt="X" width="32" height="32"></a>
+		alt="X" width="25" height="25"></a>
 
 		<a href="https://www.linkedin.com/in/markadamsme/"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/linkedin.png" 
-		alt="LinkedIn" width="32" height="32"></a>
+		alt="LinkedIn" width="25" height="25"></a>
+
+		<a href="https://www.researchgate.net/profile/Mark-Adams-3"
+		target="_blank" class="w3-hover-text-green">
+		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
+		alt="Research Gate" width="29" height="29"></a>
 
 		<a href="https://scholar.google.com/citations?hl=en&user=Kq7duNQAAAAJ"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/G_Scholar.png" 
 		alt="Google Scholar" width="32" height="32"></a>
 
-		<a href="https://www.researchgate.net/profile/Mark-Adams-3"
-		target="_blank" class="w3-hover-text-green">
-		<img src="https://archimedeansolids.github.io/w3images/r_gate.png" 
-		alt="Research Gate" width="32" height="32"></a>
-		</p>		
+		</p>
+
 
 
 	<p>
