comment from python script

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		"https://royalsocietypublishing.org/doi/pdf/10.1098/rsbm.2006.0004"
 		target="_blank" class="w3-hover-text-green">
 		Harold S. M Coxeter</a></b></span>, 
-		was first to solve the Snub Dodecahedron, Thirteenth Archimedean. His friend, 
+		was first to solve the Snub Dodecahedron. His friend, 
 		<span style="color:green"><b><a href=
 		"https://mathworld.wolfram.com/about/author.html" 
 		target="_blank" class="w3-hover-text-green">		
@@ -78,7 +78,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		"https://hcrajpoot.jimdofree.com/"
 		target="_blank" class="w3-hover-text-green">		
 		Harish Rajpoot</a></b></span> when he was at Madan Mohan Malaviya 
-		University of Technology, Gorakhpur, where the Rapti River runs down from Nepal.</p>
+		University of Technology, Gorakhpur, where the Rapti runs down from Nepal.</p>
 	<p>
 		The other two closed form solutions of the Snub Dodecahedron are in an
 		<span style="color:blue"><b><a href=
