comment from python script

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		of the Snub Dodecahedron. This solid is thirteenth on the list given by Pappus in his 
 		<span style="color:blue"><b><a href="https://math.nyu.edu/Archimedes/Solids/Pappus.html"
 		target="_blank" class="w3-hover-text-green">
-		Fifth book of the Collection</a></b></span>, fourth century AD.
+		Fifth book of the Collection.</a></b></span>
 		</p>
 	<p>
 		One rainy night in the early 1980’s, I was sleeping in my car 
