comment from python script

--- a/aqualover.html
+++ b/aqualover.html
@@ -87,11 +87,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 		</p>
 	<h4><b>Aqualover</b></h4>
 		<p style="margin-left: 15px;">
-		<a href="https://archimedeansolids.github.io/aqualover.html"
+		<a href="https://github.com/archimedeansolids/aqualover/wiki"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
 		alt="Aqualover" width="50" height="50">
-		Aqualover's blog</a></p>
+		Aqualover</a></p>
 
 	<p style="margin-left: 15px;">
 		<a href="https://github.com/archimedeansolids/aqualover"
