--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<a href="https://github.com/archimedeansolids"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/GitHub.png" 
-		alt="GitHub" width="32" height="32"></a>
+		alt="GitHub" width="35" height="35"></a>
 
 		<a href="https://discord.com/channels/836455665257021440/836455665257021443"
 		target="_blank" class="w3-hover-text-green">
@@ -194,7 +194,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		</p>
 		
 	<p>
-		<a href="https://archimedeansolids.github.io/aqualover.html"
+		<a href="https://github.com/archimedeansolids/aqualover/wiki"
 		target="_blank" class="w3-hover-text-green">
 		<img src="https://archimedeansolids.github.io/w3images/aquaicon.ico" 
 		alt="Aqualover" width="32" height="32">
