comment from python script

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ and is wrapped around the whole page content, except for the footer in this exam
       <p>Buckminster Fuller was so nice to me. When in college, 
 		I showed him my math on the 
 		Twelfth Archimedean Solid. I thought it was amazing this solid's volume 
-		to be exactly 95 + 50&radic;5. Ploted here as the <span style="color:red">
+		to be exactly 95 + 50&radic;5. Plotted here as the <span style="color:red">
 		<b><a href="https://archive.org/details/archimedeanplatonicsolids/page/n25/mode/2up"
 		target="_blank" class="w3-hover-text-green">
 		9vT</a></b></span> volume point.
