comment from python script

--- a/index.html
+++ b/index.html
@@ -81,10 +81,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		University of Technology, Gorakhpur, where the Rapti runs down from Nepal.</p>
 	<p>
 		The other two closed form solutions of the Snub Dodecahedron are in an
-		<span style="color:blue"><b><a href=
-		"https://nbviewer.org/url/archive.org/download/musing_math/Volume_Solutions_To_Snub_Dodecahedron.ipynb"
-		target="_blank" class="w3-hover-text-green">
-		essay </a></b></span> coauthored with Menno Kosters. At the bottom of this wiki page, 
+		essay coauthored with Menno Kosters. At the bottom of this wiki page, 
 		<span style="color:blue"><b><a href="https://en.wikipedia.org/wiki/Snub_dodecahedron"
 		target="_blank" class="w3-hover-text-green">
 		Snub Dodecahedron</a></b></span>, there is a link to the essay.  		
