comment from python script

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		<span style="color:blue"><b><a href=
 		"https://www.sagemath.org/"
 		target="_blank" class="w3-hover-text-green">
-		SageMath</a></b></span>. In the essay, he uses SageMath to solve the volume 
+		SageMath</a></b></span>. In the essay linked below, he uses SageMath to solve the volume 
 		of the Snub Dodecahedron. This solid is thirteenth on the list given by Pappus in his 
 		<span style="color:blue"><b><a href="https://math.nyu.edu/Archimedes/Solids/Pappus.html"
 		target="_blank" class="w3-hover-text-green">
