comment from python script

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@ and is wrapped around the whole page content, except for the footer in this exam
 		essay coauthored with Menno Kosters. At the bottom of this wiki page, 
 		<span style="color:blue"><b><a href="https://en.wikipedia.org/wiki/Snub_dodecahedron"
 		target="_blank" class="w3-hover-text-green">
-		Snub Dodecahedron</a></b></span>, there is a link to the essay.  		
+		Snub Dodecahedron</a></b></span>, there is a link to this essay, as linked below.  		
 		Menno is the owner of this Wikipedia page and an advocate of 
 		<span style="color:blue"><b><a href=
 		"https://www.sagemath.org/"
 		target="_blank" class="w3-hover-text-green">
-		SageMath</a></b></span>. In the essay linked below, he uses SageMath to solve the volume 
+		SageMath</a></b></span>. In the essay, he uses SageMath to solve the volume 
 		of the Snub Dodecahedron. This solid is thirteenth on the list given by Pappus in his 
 		<span style="color:blue"><b><a href="https://math.nyu.edu/Archimedes/Solids/Pappus.html"
 		target="_blank" class="w3-hover-text-green">
