comment from python script

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 		essay coauthored with Menno Kosters. At the bottom of this wiki page, 
 		<span style="color:blue"><b><a href="https://en.wikipedia.org/wiki/Snub_dodecahedron"
 		target="_blank" class="w3-hover-text-green">
-		Snub Dodecahedron</a></b></span>, there is a link to this essay, as linked below.  		
+		Snub Dodecahedron</a></b></span>, there is a link to this essay, as is linked below.  		
 		Menno is the owner of this Wikipedia page and an advocate of 
 		<span style="color:blue"><b><a href=
 		"https://www.sagemath.org/"
